Fixed layout on mobile view

--- a/app/src/styles/card.css
+++ b/app/src/styles/card.css
@@ -1,5 +1,5 @@
 .post-margins {
-    margin-top: 5rem;    
+    padding-top: 5rem;    
     margin-bottom: 2rem;
 }
 
