--- a/app/src/styles/homepage.css
+++ b/app/src/styles/homepage.css
@@ -2,10 +2,16 @@ html, body {
     max-width: 100%;
     overflow-x: hidden;
 }
-#homepage{
-    padding-top: 5rem;
-}
 
 #posts{
     background-color: rgb(245, 245, 245);
+    padding-top: 6rem;
+    padding-bottom: 2rem;
+}
+
+@media only screen and (max-width: 768px) {
+   #homepage .col-6 {
+       flex: 1 1 100%;
+       max-width: 100%;
+   }
 }
