--- a/app/src/styles/homepage_bar.css
+++ b/app/src/styles/homepage_bar.css
@@ -4,6 +4,7 @@
 }
 
 #left_bar{
+    padding-top: 6rem;
     color: #564946;
 }
 
